[package]
name = "testing_opus_to_wav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.34", features = ["full"] }
symphonia = "0.5.4"
opus = "0.3"
ogg = "0.9.1"
lewton = "0.10.2"
ogg-opus = "0.1.2"
wav = "1.0.1"
hound = "3.5.1"